# Rosetta

./: .dockerignore  .env.example  .gitignore  .py  2b) Fixed Star Lookup.xlsx  CHART_DATACLASS_README.md  CONTRIBUTING.md  Dockerfile  README.md  UItest.py  _test_json.py  app.py  auth_ui.py  brain_preview.py  calc.py  calc_v2.py  calling functions cheat sheet for me.txt  chart_models.py  circuit_sim.py  config.py  data_helpers.py  db_access.py  dignity_calc.py  donate_v2.py  drawing_current_transit.py  drawing_refactor.py  drawing_v2.py  event_lookup_v2.py  events.jsonl  export_static_to_json.py  fix.py  fixed_stars.xlsx  house_selector_v2.py  inspect_houses.py  interp.py  interp_base_natal.py  interp_refactor.py  interp_v2.py  lookup_v2.py  migrate_profiles_to_person_profile.py  (+46 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.streamlit/: config.toml
Rosetta_v2/: calc_v2.py  drawing_v2.py  event_lookup_v2.py  house_selector_v2.py  interp.py  lookup_v2.py  now_v2.py  patterns_v2.py  profile_manager_v2.py  profiles_v2.py  test_calc_v2.py  toggles_v2.py  wizard_v2.py
backups/: UItest.py  app.py  drawing.py  helpers.py  lookup.py  patterns.py  patterns2.py  profiles.py  rosetta-legacy.py  rosetta1.py  rosetta2.py  rosetta3.py  rosetta5.py  test.py
data/: profiles.db
ephe/: s136108.se1  s136199.se1  se00032.se1  se00075.se1  se00106.se1  se00186.se1  se00193.se1  se00259.se1  se00318.se1  se00318s.se1  se00381.se1  se00422.se1  se00458.se1  se00514.se1  se01170.se1  se01685.se1  se01930.se1  se01943.se1  se02022.se1  se02060.se1  se03361.se1  se03412.se1  se03671.se1  se05145.se1  se10669.se1  se20000.se1  se90377.se1
migrations/: wire_tabs.py  (+2 more)
(+254 files in other folders)
