[metadata]
name = rosetta
version = attr: rosetta.__version__
description = Rosetta astrology toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Rosetta Team

[options]
packages = find:
python_requires = >=3.10
install_requires =
    streamlit
    pandas
    matplotlib
    numpy
    geopy
    timezonefinder
    networkx
    pyswisseph
    openpyxl
    watchdog
    bcrypt
    streamlit_authenticator
    supabase
    python-dateutil
    psycopg2-binary
    email-validator
    pytz
    plotly>=5.0.0
    google-generativeai

[options.entry_points]
console_scripts =
    rosetta = rosetta.app:main

[tool:pytest]
testpaths = tests
addopts = -q
